--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="education">
+            <h2>Education</h2>
+            <div class="education-container">
+                <div class="education-element">
+                    <h3>Bachelor of softwaare engineering</h3>
+                    <h4>University name 01</h4>
+                    <h4>2009-2013</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+                <div class="education-element border">
+                    <h3>Master of software engineering</h3>
+                    <h4>University name 02</h4>
+                    <h4>2013-2015</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 </body>
 
 </html>
