este es mi cambio final

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 
 <body>
@@ -267,6 +268,82 @@
 
         </div>
     </section>
+    <section class="mi-seccion">
+        <div class="contenedor">
+            <div class="columna">
+                <h2>IDIOMAS</h2>
+                <ul>
+                    <li>
+                        Inglés
+                        <div class="barra-nivel" style="width: 80%;"></div>
+                    </li>
+                    <li>
+                        Alemán
+                        <div class="barra-nivel" style="width: 60%;"></div>
+                    </li>
+                    <li>
+                        Francés
+                        <div class="barra-nivel" style="width: 40%;"></div>
+                    </li>
+                    <li>
+                        Español
+                        <div class="barra-nivel" style="width: 90%;"></div>
+                    </li>
+                    <li>
+                        Turco
+                        <div class="barra-nivel" style="width: 20%;"></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="contenedor2">
+                <div class="columna">
+                    </div>
+                <div class="linea-divisoria"></div>
+                <div class="columna">
+                    </div>
+            </div>
+            <div class="columna">
+                <h2>CERTIFICACIÓN</h2>
+                <div class="certificacion">
+                    <h3>Certified Software Engineer</h3>
+                    <p>2016-2017</p>
+                    <p>University Name 01</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                </div>
+                <div class="certificacion">
+                    <h3>Microsoft Azure Fundamentals</h3>
+                    <p>2015-2016</p>
+                    <p>University Name 02</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+    <div class="hobbies">
+        <H1 class="heading">HOBBIES</H1>
+        <ul class="list">
+            <li class="hobbie"><i class='fas fa-headphones' style='font-size:48px;color:black'></i>
+                Music
+            </li>
+            <li class="hobbie">
+                yoga
+            </li>
+            <li class="hobbie">
+                coding
+            </li>
+            <li class="hobbie">
+                cooking
+            </li>
+            <li class="hobbie">
+                Reading
+            </li>
+            <li class="hobbie">
+                Traveling
+            </li>
+        </ul>
+    </section>
+    
     
 
 </body>
